Fix card expanding when more list items thus shifting position

--- a/resources/views/Pages/Username.css
+++ b/resources/views/Pages/Username.css
@@ -68,7 +68,7 @@
     background-color: var(--purple);
     height: 300px;
     margin: -1rem;
-    padding: 2rem;
+    /* padding: 2rem; */
     border-radius: 0 0 25px 25px;
     position: relative;
   }
@@ -89,11 +89,13 @@
     border-radius: 25px;
     box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.2);
     left: 50%;
+    margin-top: 0;
     min-width: 350px;
     position: absolute;
     padding: 2rem 3rem;
-    top: 45%;
-    transform: translate(-50%, -50%);
+    top: 70%;
+    transform: translateX(-50%);
+    min-height: 200px;
   }
 
   .preview__user-projects ul {
